--- a/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/UserProgramDetails.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/UserProgramDetails.cshtml
@@ -131,6 +131,7 @@
         Html.RenderAction("ClientPerformanceGauge", "ClientCharts", new { userId = Session["UserId"] });
         Html.RenderAction("ClientPastWeekMacroChart", "ClientCharts", new { userId = Session["UserId"] });
         Html.RenderAction("PvAMacroPieChart", "ClientCharts");
+        Html.RenderAction("PvACurrentMacroPieChart", "ClientCharts");
         Html.RenderAction("ClientCurrentWeekMacroGauge", "ClientCharts", new { userId = Session["UserId"] });
     });
 }).GetHtml()
