--- a/KetoSavageWeb/KetoSavageWeb/Content/Site.css
+++ b/KetoSavageWeb/KetoSavageWeb/Content/Site.css
@@ -710,6 +710,8 @@ html, body {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 /*Beginning of Chart CSS declarations*/
 
@@ -794,83 +796,82 @@ html, body {
 
 /* carousel */
 #quote-carousel {
-    padding: 0 10px 30px 10px;
-    background-color: #0a0a0a;
+    height: 200px;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    margin: 10px;
 }
 
-    /* Control buttons  */
-    #quote-carousel .carousel-control {
-        background: none;
-        color: #dedede;
-        font-size: 2.3em;
-        text-shadow: none;
-        width: 50px;
-    }
-        /* Previous button  */
-        #quote-carousel .carousel-control.left {
-            /*left: -10px;*/
-            /*border: solid;*/
-        }
-        /* Next button  */
-        #quote-carousel .carousel-control.right {
-            /*right: 10px !important;*/
-        }
-    /* Changes the position of the indicators */
-    #quote-carousel .carousel-indicators {
-        right: 50%;
-        top: auto;
-        bottom: 0px;
-        margin-right: -5px;
-    }
-        /* Changes the color of the indicators */
-        #quote-carousel .carousel-indicators li {
-            background: #DEDEDE;
-        }
+/* Control buttons  */
+#quote-carousel .carousel-control {
+    background: none;
+    color: #dedede;
+    font-size: 2.3em;
+    text-shadow: none;
+    width: 50px;
+}
+/* Previous button  */
+/*#quote-carousel .carousel-control.left {
+    left: -10px;
+    border: solid;
+}*/
+/* Next button  */
+/*#quote-carousel .carousel-control.right {
+    right: 10px !important;
+}*/
+/* Changes the position of the indicators */
+#quote-carousel .carousel-indicators {
+    /*right: 50%;*/
+    top: auto;
+    bottom: 0px;
+    /*margin-right: -5px;*/
+    margin: auto;
+}
+/* Changes the color of the indicators */
+#quote-carousel .carousel-indicators li {
+    background: #DEDEDE;
+}
 
-        #quote-carousel .carousel-indicators .active {
-            background: #ff1111;
-        }
+#quote-carousel .carousel-indicators .active {
+    background: #ff1111;
+}
 
-    #quote-carousel img {
-        width: auto;
-        height: 100px;
-        border: solid;
-    }
+/*#quote-carousel img {
+    width: auto;
+    height: 100px;
+    border: solid;
+}*/
 /* End carousel */
 
 .item blockquote {
     border-left: none;
     margin: 10px;
+    text-align: center;
 }
 
-    .item blockquote img {
-        margin-bottom: 10px;
-    }
-
-/*.item blockquote p:before  {
-    content: "\f10d";
-    font-family: 'Fontawesome';
-    float: left;
-    margin-right: 10px;
-}*/
-
-/*.news p:before {
-    content: "KetoSavage Says - ";
-    font-weight: bold;
-}*/
+.item blockquote img {
+    margin-bottom: 10px;
+}
 
 .quote {
     font-family: Georgia, serif;
     font-style: italic;
+    padding: 15px;
+    text-align:center;
 }
 
+.news {
+    font-family: Georgia, serif;
+    font-style:normal;
+    padding: 15px;
+    text-align: center;
+}
 
-    .quote p:before {
-        content: "\f10d";
-        font-family: 'Fontawesome';
-        float: left;
-        margin-right: 10px;
-    }
+.quote p:before {
+    content: "\f10d";
+    font-family: 'Fontawesome';
+    float:none;
+    margin-right: 10px;
+}
 
 /*Devextreme CSS*/
 /*
@@ -17695,7 +17696,7 @@ html, body {
 @media only screen and (max-width: 600px) {
     [class*="col-"] {
         width: 100%;
-        background-color: aqua;
+        background-color: black;
     }
 
     #loginForm, #form-container {
@@ -17712,26 +17713,26 @@ html, body {
         bottom: 0px !important;
     }
 
-        #quote-carousel .carousel-indicators li {
-            display: inline-block;
-            margin: -10px 5px;
-            width: 7px;
-            height: 7px;
-        }
+    #quote-carousel .carousel-indicators li {
+        display: inline-block;
+        margin: -10px 5px;
+        width: 7px;
+        height: 7px;
+    }
 
-            #quote-carousel .carousel-indicators li.active {
-                margin: -10px 5px;
-                width: 10px;
-                height: 10px;
-            }
+    #quote-carousel .carousel-indicators li.active {
+        margin: -10px 5px;
+        width: 10px;
+        height: 10px;
+    }
 }
 
 /*Medium devices (landscape tablets, 768px and up)*/
 @media (min-width: 768px) {
-    #quote-carousel {
+    /*#quote-carousel {
         margin-bottom: 0px;
         padding: 0 40px 30px 40px;
-    }
+    }*/
 }
 
 /*Large devices (laptops/desktops, 992px and up*/
@@ -17739,6 +17740,7 @@ html, body {
     #loginForm, #form-container {
         width: 75%;
         padding: 10px;
+        margin: auto;
         /*background-color: orange;*/
     }
 }
@@ -17748,6 +17750,7 @@ html, body {
     #loginForm, #form-container {
         width: 50%;
         padding: 10px;
+        margin: auto;
         /*background-color: green;*/
     }
 }
