--- a/KetoSavageWeb/KetoSavageWeb/Views/Home/_dxLoginForm.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Home/_dxLoginForm.cshtml
@@ -1,47 +1,57 @@
 ﻿@using KetoSavageWeb.Models
 @using ButtonType = DevExtreme.AspNet.Mvc.ButtonType
 @using TextBoxMode = DevExtreme.AspNet.Mvc.TextBoxMode
-<div id='loginImage'>
-    <img src='../../Content/Images/KSLogo_NotLoggedIn.png' alt='KetoSavage' class='responsive'/>
+
+<div class="row">
+    <div class="col-12">
+        <img src='../../Content/Images/KSLogo_NotLoggedIn.png' alt='KetoSavage' class='responsive' />
+    </div>
 </div>
-
-<div id="loginForm">
-
-
-    @using (Html.BeginForm("Login", "Account"))
-    {
-        using (Html.DevExtreme().ValidationGroup())
+<div class="row">
+    <div class="col-sm-1 col-md-2 col-lg-3 col-xl-4">
+            
+    </div>
+    <div class="col-sm-10 col-md-8 col-lg-6 col-xl-4">
+        @using (Html.BeginForm("Login", "Account"))
         {
-            @Html.AntiForgeryToken()
+            using (Html.DevExtreme().ValidationGroup())
+            {
+                @Html.AntiForgeryToken()
 
-            @(Html.DevExtreme().Form<LoginModel>()
-                          .ShowValidationSummary(true)
-                          .Items(items =>
-                          {
-                              items.AddGroup()
-                                  .Caption("Log In")
-                                  .Items(groupItem =>
-                                  {
-                                      groupItem.AddSimple().Template(@<text>
-                                                                    <p style='color: red'>@ViewBag.ErrorMessage</p>
-                                                                </text>);
-                                                groupItem.AddSimpleFor(m => m.UserName);
-                                                groupItem.AddSimpleFor(m => m.Password)
-                                                    .Editor(e => e.TextBox().Mode(TextBoxMode.Password));
-                                                groupItem.AddSimpleFor(m => m.RememberMe)
-                                                    .Editor(e => e.CheckBox());
-                                            });
-                                        items.AddButton()
-                                            .HorizontalAlignment(HorizontalAlignment.Right)
-                                            .ButtonOptions(b => b.Text("Login")
-                                                .Type(ButtonType.Normal)
-                                                .UseSubmitBehavior(true));
+                @(Html.DevExtreme().Form<LoginModel>()
+                                        .ShowValidationSummary(true)
+                                        .Items(items =>
+                                        {
+                                            items.AddGroup()
+                                                .Caption("Log In")
+                                                .Items(groupItem =>
+                                                {
+                                                    groupItem.AddSimple().Template(@<text>
+                                                    <p style='color: red'>@ViewBag.ErrorMessage</p>
+                                                </text>);
+                                                        groupItem.AddSimpleFor(m => m.UserName);
+                                                        groupItem.AddSimpleFor(m => m.Password)
+                                                .Editor(e => e.TextBox().Mode(TextBoxMode.Password));
+                                                        groupItem.AddSimpleFor(m => m.RememberMe)
+                                                .Editor(e => e.CheckBox());
+                                                    });
+                                                items.AddButton()
+                                        .HorizontalAlignment(HorizontalAlignment.Right)
+                                        .ButtonOptions(b => b.Text("Login")
+                                            .Type(ButtonType.Normal)
+                                            .UseSubmitBehavior(true));
 
-                                    })
-                                    .FormData(Model)
-            )
+                                            })
+                                                        .FormData(Model)
+                )
 
 
+            }
         }
-    }
+
+    </div>
+    <div class="col-sm-1 col-md-2 col-lg-3 col-xl-4">
+            
+    </div>
 </div>
+
