--- a/KetoSavageWeb/KetoSavageWeb/Views/ManageNews/_newsCarousel.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/ManageNews/_newsCarousel.cshtml
@@ -20,26 +20,22 @@
             @foreach (var item in Model) {
             i++;
             var active = i == 1 ? "active" : "";
-            <div class="item @active">
+            <div class="carousel-item @active">
                 @if(item.Type == "Quote")
                 {
                 <blockquote class="quote">
-                    <div class="row">
-                        <div class="col-sm-9">
+                        <div class="d-block w-100">
                             <p>@item.Headline</p>
                             <small>@item.Author</small>
                         </div>
-                    </div>
                 </blockquote>
                 }
                 else
                 {
                 <blockquote class="news">
-                    <div class="row">
-                        <div class="col-sm-9">
+                        <div class="d-block w-100">
                             <p>@item.Headline</p>
                         </div>
-                    </div>
                 </blockquote>
                 }
             </div>
@@ -47,8 +43,14 @@
         </div>
 
         <!-- Carousel Buttons Next/Prev -->
-        <a data-slide="prev" href="#quote-carousel" class="left carousel-control"><i class="fa fa-chevron-left"></i></a>
-        <a data-slide="next" href="#quote-carousel" class="right carousel-control"><i class="fa fa-chevron-right"></i></a>
+        <a data-slide="prev" href="#quote-carousel" role="button" class="carousel-control-prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a data-slide="next" href="#quote-carousel" role="button" class="carousel-control-next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
     <script type="text/javascript">
         // When the DOM is ready, run this function
