Fixed the client scoring charts

--- a/KetoSavageWeb/KetoSavageWeb/Views/CoachCharts/_topPerformers.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/CoachCharts/_topPerformers.cshtml
@@ -1,7 +1,7 @@
 ﻿@(Html.DevExtreme().Chart()
     .ID("topPerformersLastWeek")
     .Title(t => t
-        .Text("Top 5 Performers - Previous Week")
+        .Text("Top 5 Performers - Last 7 Days")
         .Font(f => f.Color("White").Size(14).Weight(200))
     )
     .Size(si => si
