--- a/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/Index.cshtml
@@ -2,24 +2,28 @@
 @{
     ViewBag.Title = "User Progress";
 }
+@if(Request.Browser.IsMobileDevice)
+{
 <div class="row">
     <div class="col-sm-12 col-md-3">
         @(Html.DevExtreme().Button()
-                                    .ID("btnEnterMacros")
-                                    .Text("Enter Macros")
-                                    .OnClick("enterMacroPopup")
+            .ID("btnEnterMacros")
+            .Text("Enter Macros")
+            .OnClick("enterMacroPopup")
 
         )
     </div>
     <div class="col-sm-12 col-md-3">
         @(Html.DevExtreme().Button()
-                                    .ID("btnEnterMeasurements")
-                                    .Text("Enter Measurements")
-                                    .OnClick("enterMeasurementPopup")
+            .ID("btnEnterMeasurements")
+            .Text("Enter Measurements")
+            .OnClick("enterMeasurementPopup")
 
         )
     </div>
 </div>
+}
+
 <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-10 col-xl-11">
         @Html.Action("newsCarousel", "ManageNews")
@@ -48,13 +52,33 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-2">
+    <div class="col-sm-12 col-md-8 col-lg-6 col-xl-4" style="background-color: #0a0a0a">
         @Html.Action("ClientCurrentWeekMacroGauge", "ClientCharts", new { userId = Session["UserId"] })
     </div>
 </div>
+@*<div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-10 col-xl-11" id="desktop-grid">
+        @Html.Action("ClientProgramGrid", "ClientCharts", new { userId = Session["UserId"] })
+    </div>
+</div>*@
 <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-10 col-xl-11">
-        @Html.Action("ClientProgramGrid", "ClientCharts", new { userId = Session["UserId"] })
+        @if (Request.Browser.IsMobileDevice)
+        {
+            if (Request.Browser.ScreenPixelsWidth > 780)
+            {
+                @Html.Action("ClientProgramGrid", "ClientCharts", new { userId = Session["UserId"] })
+            }
+            else
+            {
+                @Html.Action("ClientProgramGridMobile", "ClientCharts", new { userId = Session["UserId"] })
+            }
+
+        }
+        else
+        {
+            @Html.Action("ClientProgramGrid", "ClientCharts", new { userId = Session["UserId"] })
+        }
     </div>
 </div>
 
