Finished the Manage user account functionality.

--- a/KetoSavageWeb/KetoSavageWeb/Views/Account/_dxChangePassword.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Account/_dxChangePassword.cshtml
@@ -14,12 +14,23 @@
         .Items(items =>
         {
             items.AddGroup()
-                    .Caption("Change Password")
                     .Items(groupItems =>
                     {
-                        groupItems.AddSimpleFor(m => m.OldPassword);
-                        groupItems.AddSimpleFor(m => m.NewPassword);
-                        groupItems.AddSimpleFor(m => m.ConfirmPassword);
+                        groupItems.AddSimpleFor(m => m.OldPassword)
+                            .Editor(e => e
+                                .TextBox()
+                                .Mode(DevExtreme.AspNet.Mvc.TextBoxMode.Password)
+                                );
+                        groupItems.AddSimpleFor(m => m.NewPassword)
+                            .Editor(e => e
+                                .TextBox()
+                                .Mode(DevExtreme.AspNet.Mvc.TextBoxMode.Password)
+                                );
+                        groupItems.AddSimpleFor(m => m.ConfirmPassword)
+                            .Editor(e => e
+                                .TextBox()
+                                .Mode(DevExtreme.AspNet.Mvc.TextBoxMode.Password)
+                                );
                         groupItems.AddSimple()
                             .Template(@<text>
                                     @(Html.DevExtreme().Button()
